# warehouse-agent-mvp

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  check_api.ps1  publish_github.ps1  pyproject.toml  run_app.ps1  run_complex_case.ps1  run_demo.ps1  run_mcp.ps1  run_quality.ps1  run_tests.ps1
config/: datahub_mcp.example.yml
demo/: README.md  demo_schema.sql  init_duckdb_demo.py
docs/: agent_upgrade.md  architecture.md  code_style.md  datahub_mcp_integration.md  information_schema_integration.md  modeling_rules.md  production_gap.md  screenshots.md  sql_style.md
examples/: sales_channel_daily.md
knowledge_base/: dqc_templates.md  metric_definitions.md  table_metadata.json  warehouse_standards.md
mcp_server/: __init__.py  server.py
mcp_server/tools/: __init__.py  warehouse.py
src/dw_agent/: __init__.py  cli.py  config.py  graph.py  llm.py  mcp_client.py  memory.py  metadata.py  rag.py  sql_preview.py  state.py  tools.py
src/dw_agent/metadata/: __init__.py  datahub_mcp_provider.py  information_schema_provider.py  local_json_provider.py  mcp_provider.py  provider.py  selector.py  semantic_mapper.py
src/dw_agent/nodes/: clarify_requirement.py  common.py  decide_modeling_strategy.py  decide_table_reuse.py  generate_ddl.py  generate_dqc.py  generate_etl.py  generate_modeling.py  load_memory.py  parse_requirement.py  plan_task.py  retrieve_context.py  review.py  review_sql_style.py  rewrite_sql.py  route_requirement.py  save_memory.py  sql_preview.py  tool_router.py  validate_sql.py  verify_outputs.py
src/dw_agent/tools/: __init__.py  datahub_mcp_client.py  datahub_mcp_tool.py
tests/: test_code_style_config.py  test_controlled_agent.py  test_datahub_mcp_provider.py  test_datahub_mcp_tool.py  test_examples.py  test_graph_routing.py  test_information_schema_provider.py  test_mcp_tools.py  test_memory.py  test_metadata_provider.py  test_modeling_strategy.py  test_parse_requirement.py  test_python_compile.py  test_sql_style_review.py  test_sql_validation.py  test_sqlglot_validation.py  test_tool_router_datahub.py
